syntax = "proto3";

package log;

import "google/protobuf/timestamp.proto";

option go_package = "../pkg/gen/proto";

service Data {
  rpc Fetch(FetchRequest) returns (Empty);
  rpc List(ListRequest) returns (ListResponse);
}

message FetchRequest {
  string Url = 1;
}

message ListRequest {
  int64 Limit = 1;
  Sort sort = 2;
  Entity entity = 3;
}

enum Sort {
  Ascending = 0;
  Descending = 1;
}

enum Entity {
  Name = 0;
  Price = 1;
}

message ListResponseEntity {
  string Name = 1;
  int64 Price = 2;
  int64 Changes = 3;
  google.protobuf.Timestamp Timestamp = 4;
}

message ListResponse {
  repeated ListResponseEntity products = 1;
}

message Empty{}

